🐛fix: `readIntegerList()`가 알파벳도 숫자로 변환하고 있었던 이슈 수정